--- a/src/styles/SecretCover.css
+++ b/src/styles/SecretCover.css
@@ -1,19 +1,40 @@
 .secret-main{
-    width: 50px;
-    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 40px;
+    height: 40px;
 
     position: relative;
     top: 80vh;
     left: 90vw;
+
+
 }
 
-.secret-main:after{
-    content: "";
-    position:absolute;
+.secret-corner{
+    z-index: 99;
+    width: 40px;
+    height: 40px;
+
+    background-color: #282c34;
+
+    position: absolute;
+}
+
+.secret-corner:after{
+    content: '';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 10px 10px 0;
+    border-color: transparent #283234 transparent transparent;
+    right: 0;
     top: 0;
-    right: 0;    
-    width:40px;
-    height:40px;
-    transform:rotate(45deg);
-    background-color:#000;
+    position: absolute;
+}
+
+.secret-corner:hover::after{
+    cursor: pointer;
 }
